--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       ports:
         - "8088:8080"
         - "7077:7077"
+      env_file:
+        - ./.env
       environment:
         - SPARK_MASTER_HOST=spark-master
         - SPARK_NO_DAEMONIZE=true
@@ -22,6 +24,8 @@ services:
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     depends_on:
       - spark-master
+    env_file:
+      - ./.env
     environment:
       - SPARK_WORKER_CORES=2
       - SPARK_WORKER_MEMORY=2g
