--- a/env.example
+++ b/env.example
@@ -18,7 +18,7 @@ CLICKHOUSE_PASSWORD=
 CLICKHOUSE_DB=default
 
 # Kafka Configuration (optional)
-KAFKA_BOOTSTRAP_SERVERS=localhost:9092
+KAFKA_BOOTSTRAP_SERVERS=kafka-1:9094,kafka-2:9094,kafka-3:9094
 KAFKA_JAAS_CONFIG=
 KAFKA_SASL_MECHANISMS=
 KAFKA_SSL_TRUSTSTORE_LOCATION=
